# LogicLatch

./: .gitignore  CMakeLists.txt  InsertSleepPass.cpp  README.md  build.sh  construct.py  extractor.cpp  extractor.sh  instrument.sh
Fuzzification/: BranchExtractorPass.cpp  CMakeLists.txt  CRCPass.cpp  README.md  build.sh  crc.cpp  crc.h  crc.ll  log.txt  simple_crc.cpp
Fuzzification/afl-result/: libpng  libpng_fuzzification  nm  pcre2  pcre2_fuzzification  pcre2test_num_cmp.csv  plot_data (14)  plot_data (15)  plot_data (16)  plot_data (17)  plot_data (18)  plot_data (19)  readpng_num_cmp.csv
Fuzzification/example/: simple  simple.cpp  simple.ll  simple_crc  simple_crc.ll  simple_crc_linked.ll  simple_crc_naive  simple_crc_naive.ll  simple_crc_opt.ll  simple_sleep  simple_sleep.ll
NeuroFuzzGuard/: construct.py  demo.ipynb  extractor.cpp  extractor.sh
NeuroFuzzGuard/example/: functions.cpp  simple_sleep  simple_sleep.ll
example/: simple  simple-features.txt  simple.bc  simple.cpp  simple.ll  simple_sleep  simple_sleep.ll
script/: extractor.cpp
